[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "herodotus"
authors = [{name = "Lucas Calegario", email = "lucas.c.calegario@outlook.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "scrapy >=2.6.0, <2.7.0", 
    "sqlalchemy >=1.4.0, <1.5.0",
]

[project.optional-dependencies]
test = [
    "pytest >=7.1.0, <7.2.0",
]

[project.urls]
Home = "https://github.com/xlurio/herodotus"
